# Auto_Podcast_CRS

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pipeline.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
auto_podcast_crs/: __init__.py  _http.py  _logging.py  config.py  pipeline.py
auto_podcast_crs/audio/: __init__.py  finishing.py  postprocess.py
auto_podcast_crs/rss/: __init__.py  builder.py
auto_podcast_crs/scripts/: __init__.py  claude_monologue.py  resources.py  topic_to_script.py
auto_podcast_crs/scripts/prompts/: system_v1_generic.md  system_v1_onboarding.md  system_v1_persuasion.md  system_v2_generic.md  system_v2_onboarding.md  system_v2_persuasion.md  system_v3_topic_generic.md
auto_podcast_crs/storage/: __init__.py  r2.py
auto_podcast_crs/tts/: __init__.py  elevenlabs_v3.py
brand/: metadata.md
docs/: known_limitations.md  pipeline_design.md  prompt_ab_testing.md  resource_preparation.md  voice_settings.md  workflow.md
episodes/01_why-surgeons-should-code/: metadata.yaml  script.txt  source.md
episodes/02_python-for-hesitant-physician/: metadata.yaml  script.txt
episodes/03_your-first-week-with-python/: metadata.yaml  script.txt
episodes/ab_test/: 01_why-surgeons-should-code_v2_generic.txt  README.md
scripts/: generate_from_topic.py  generate_script.py  publish.py  run_tts.py
src/: __init__.py  audio_processor.py  config.py  pipeline.py  script_generator.py  tts_converter.py
tests/: __init__.py  conftest.py  test_audio.py  test_audio_finishing.py  test_audio_processor.py  test_chunk_split.py  test_config.py  test_http_retry.py  test_pipeline.py  test_prompt_loader.py  test_r2.py  test_resources.py  test_rss.py  test_script_generator.py  test_topic_to_script.py  test_tts_converter.py  test_v2_prompts.py
