[project]
name = "auto-podcast-crs"
version = "0.4.0"
description = "End-to-end podcast pipeline: blog → Claude script → ElevenLabs v3 → R2 → RSS"
requires-python = ">=3.11"
authors = [
    {name = "Shih-Feng Huang", email = "odafeng@hotmail.com"}
]
license = {text = "Proprietary"}
readme = "README.md"

dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=7.4",
    "pre-commit>=3.7",
]
storage = [
    "boto3>=1.34",
]
rss = [
    "feedgen>=1.0",
]
# For future WordPress webhook server
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
# All production extras — install with `pip install -e '.[publish]'` to get
# everything needed for the end-to-end pipeline.
publish = [
    "boto3>=1.34",
    "feedgen>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auto_podcast_crs"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["episodes"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
